# 2-UltraCold

./: .gitignore  CMakeLists.txt  README.md  frickel.sh  install.sh  install_einc.sh  install_helix.sh  install_justus.sh  make.sh  make_einc.sh  make_helix.sh  make_justus.sh
cmake/: UltraColdConfig.cmake  UltraColdInstall.cmake  UltraColdTargets-release.cmake  UltraColdTargets.cmake
examples/: dipolars2d-cuda.cpp  dipolars2d-cuda_singlepart.cpp  dipolars2d.prm  dipolars2d_singlepart.prm
examples/example-1/: CMakeLists.txt
examples/example-2/: CMakeLists.txt
examples/example-5/: CMakeLists.txt  example-5.cpp  example-5.prm
examples/example-6/: CMakeLists.txt  example-6.cpp  example-6.prm
examples/example-7/: CMakeLists.txt  example-7.cpp
source/base/: CMakeLists.txt
source/base/bundled/: configure_bundled_einc.sh  configure_bundled_helix.sh
source/base/solvers/: CMakeLists.txt  DipolarGPSolver.cpp
source/base/utilities/: DataWriter.cpp  DataWriter.hpp
source/cuda/: CMakeLists.txt  cudaDipolarGPSolver.cu  cudaDipolarGPSolver.cuh  cudaGPSolver.cu  cudaGPSolver.cuh  simple_kernels.cu  simple_kernels.cuh  solver_kernels.cu  solver_kernels.cuh
